--- a/conf/modules.config
+++ b/conf/modules.config
@@ -677,6 +677,11 @@ if (!params.skip_trimming) {
         ext.suffix = "unique.bed"
     }
 
+    withName: '.*:BENCHMARKING:SORT' {
+        ext.args = "-k 1,1 -k2,2n -k3,3n -u"
+        ext.suffix = "combined.bed"
+    }
+
     withName: COMBINE_TRANSCRIPTOME_GTFS {
         ext.args = "-k 1,1 -k3,3n -k4,4n"
         ext.suffix = "gtf"
