Adding mirna_expression param to config

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     input                      = null
     outdir                     = null
     phenotype                  = null
+    mirna_expression           = null
 
     // workflow options
     module                     = 'circrna_discovery'
