--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,6 @@ params {
     input                      = null
     outdir                     = null
     phenotype                  = null
-    mirna_expression           = null
 
     // workflow options
     module                     = 'circrna_discovery'
@@ -66,6 +65,13 @@ params {
 
     //> Quantification
     bootstrap_samples          = 30
+
+	//> MIRNA processing
+    mirna_expression            = null
+    mirna_min_reads             = 5
+    mirna_min_sample_percentage = 0.2
+	mirna_tools                 = 'miranda, targetscan'
+	mirna_vote                  = 1
 
     //> MISC
     save_unaligned             = false
