--- a/conf/modules.config
+++ b/conf/modules.config
@@ -612,6 +612,30 @@ if (!params.skip_trimming) {
         ]
     }
 
+    withName: COUNTS_COMBINED {
+        ext.when = { params.module.split(',').contains('circrna_discovery') }
+    }
+
+    withName: COUNTS_TO_BED {
+        ext.args = "-v FS='\\t' -v OFS='\\t' 'NR>1 { print \$1, \$2, \$3, \$1 \":\" \$2 \"-\" \$3, \".\", \".\" }'"
+        ext.suffix = "bed"
+    }
+
+    withName: MIRANDA_TO_MAJORITY {
+        ext.args = "-v FS='\\t' -v OFS='\\t' 'NR>1 { print \$1, \$2, \$7, \$8, \"miranda\" }'"
+        ext.suffix = "tsv"
+    }
+    
+    withName: TARGETSCAN_TO_MAJORITY {
+        ext.args = "-v FS='\\t' -v OFS='\\t' 'NR>1 { print \$2, \$1, \$6, \$7, \"targetscan\" }'"
+        ext.suffix = "tsv"
+    }
+
+    withName: UNIQUE_REGIONS {
+        ext.args = "-k 1,1 -k2,2n -k3,3n -u"
+        ext.suffix = "unique.bed"
+    }
+
     withName: COMBINE_TRANSCRIPTOME_GTFS {
         ext.args = "-k 1,1 -k3,3n -k4,4n"
         ext.suffix = "gtf"
