--- a/conf/modules.config
+++ b/conf/modules.config
@@ -622,7 +622,7 @@ if (!params.skip_trimming) {
     }
 
     withName: MIRANDA_TO_MAJORITY {
-        ext.args = "-v FS='\\t' -v OFS='\\t' 'NR>1 { sub(/^${params.species_id}-/, \"\", \$1); print \$1, \$2, \$7, \$8, \"miranda\" }'"
+        ext.args = "-v FS='\\t' -v OFS='\\t' 'NR>1 { print \$1, \$2, \$7, \$8, \"miranda\" }'"
         ext.suffix = "miranda.tsv"
     }
 
