--- a/conf/modules.config
+++ b/conf/modules.config
@@ -605,7 +605,7 @@ if (!params.skip_trimming) {
         ext.args = "'{ if (/^>/) { print \$0 } else { start = substr(\$0, 1, 25); print \$0 start } }'"
         ext.suffix = "backspliced.fa"
         publishDir = [
-            path: { "${params.outdir}/circrna_discovery/${meta.tool}/${meta.id}" },
+            path: { "${params.outdir}/quantification/${meta.id}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             pattern: "*.backspliced.fa"
