Use BIOAWK for ADD_BACKSPLICE

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -602,7 +602,7 @@ if (!params.skip_trimming) {
     }
 
     withName: ADD_BACKSPLICE {
-        ext.args = "'{ if (/^>/) { print \$0 } else { start = substr(\$0, 1, 25); print \$0 start } }'"
+        ext.args = "-c fastx '{ if (\$name ~ /^circ_/) { \$seq = \$seq substr(\$seq, 1, 25) } print \">\" \$name; print \$seq }'"
         ext.suffix = "backspliced.fa"
         publishDir = [
             path: { "${params.outdir}/quantification/${meta.id}" },
