fixing MIRNA_TARGETS

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -713,7 +713,7 @@ if (!params.skip_trimming) {
     withName: MIRNA_TARGETS {
         ext.when = { params.module.split(',').contains('mirna_prediction') }
         publishDir = [
-            path: { "${params.outdir}/mirna_prediction/${meta.tool}" },
+            path: { "${params.outdir}/mirna_prediction/bed_overlaps" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             pattern: "*.txt"
